testsuite/tests/tlks/should_fail/tlks_fail003.hs
{-# LANGUAGE TopLevelKindSignatures #-}
{-# LANGUAGE NamedWildCards, PolyKinds #-}

module TLKS_Fail003 where

type T :: _w
data T = MkT
